--- a/app/views/welcome/portfolio.html.erb
+++ b/app/views/welcome/portfolio.html.erb
@@ -141,7 +141,7 @@
   <!-- email form -->
     <div id="form-main">
       <div class="center-block well" id="form-div">
-        <form class="form" id="form1">
+        <form action="MAILTO:EFox2413+portfolio@gmail.com" method="post" class="form" id="form1">
           <p class="name name-icon">
             <input name="name" type="text" class="validate[required,custom[onlyLetter],length[0,100]] feedback-input" placeholder="Name" id="name" />
           </p>
